# rusty-discord-bot

./: 1config.toml  Cargo.toml  README.md  config.toml  prompt.txt
src/: main.rs
