[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18" , features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
openai-api-fork ="0.2.1"
songbird = "0.2.2"


[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice",
    "cache",
]
version ="0.11"
